first-screen upd

--- a/src/index.html
+++ b/src/index.html
@@ -2,7 +2,7 @@
 <html lang="uk">
 <head>
     <meta charset="utf-8"/>
-    <title>anime dlya muzhikov</title>
+    <title>shaposhnikov — portfolio</title>
     <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
     <meta content="width=device-width, initial-scale=1" name="viewport"/>
     <meta name="description" content="Благодійний фонд, основною метою якого є допомога людям, що постраждали внаслідок війни.">
@@ -21,18 +21,26 @@
     <!-- Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500;800&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Lusitana&family=Prompt:wght@200;300;400;500;700&display=swap" rel="stylesheet">
     <!-- THEME STYLES -->
     <link href="assets/styles/css/main.css" rel="stylesheet" type="text/css"/>
     <!-- Favicon -->
-    <link rel="shortcut icon" href="assets/images/system/icon/favicon.ico"/>
+    <link rel="shortcut icon" href="assets/images/system/favicon-32.png"/>
 </head>
 
 <body id="body">
+<div class="cursor"></div>
 <header id="included__header" class="header"></header>
 <main class="main">
     <!--========== Page Content ==========-->
-            sdsadasd
+    <section class="section--general">
+        <div class="general">
+            <div>
+                <h1 class="general__title">front-end<br>developer</h1>
+                <p class="general__subtitle">shaposhnikov — folio 2022</p>
+            </div>
+        </div>
+    </section>
     <!--========== \Page Content ==========-->
 </main>
 
