--- a/src/modules/header/index.html
+++ b/src/modules/header/index.html
@@ -1,10 +1,10 @@
 <div class="header__inner">
     <div class="header__info">
-        <p>pavlo shaposhnikov
-        portfolio - 2022</p>
+        <p>shaposhnikov
+        folio — 2022</p>
         <p>front-end developer</p>
     </div>
-    <div>
+    <button class="nav-toggle">
         menu
-    </div>
+    </button>
 </div>
