--- a/src/index.html
+++ b/src/index.html
@@ -2,7 +2,7 @@
 <html lang="uk">
 <head>
     <meta charset="utf-8"/>
-    <title>shaposhnikov — portfolio</title>
+    <title>shaposhnikov — portfolio 2022</title>
     <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
     <meta content="width=device-width, initial-scale=1" name="viewport"/>
     <meta name="description" content="Благодійний фонд, основною метою якого є допомога людям, що постраждали внаслідок війни.">
@@ -30,6 +30,7 @@
 
 <body id="body">
 <div class="cursor"></div>
+<div class="aura"></div>
 <header id="included__header" class="header"></header>
 <main class="main">
     <!--========== Page Content ==========-->
@@ -41,9 +42,62 @@
             </div>
         </div>
     </section>
+
+    <section class="section--projects">
+        <div class="projects">
+            <ul class="projects__list">
+                <li class="projects__item" onmousemove="myFunction(event)" onmouseleave="myLeaveFunction()">
+                    <a href="#" class="projects__link">
+                        <h2 class="projects__title">DrillHeadz NFT</h2>
+                        <p class="projects__subtitle">2022 - HTML, SCSS, Node.js</p>
+                    </a>
+                    <div class="projects__preview">
+                        <img src="../src/assets/images/projects/project4.png" alt="Project preview">
+                    </div>
+                </li>
+                <li class="projects__item" onmousemove="myFunction(event)" onmouseleave="myLeaveFunction()">
+                    <a href="#" class="projects__link">
+                        <h2 class="projects__title">Wall Street Mules NFT</h2>
+                        <p class="projects__subtitle">2022 - HTML, SCSS, Node.js</p>
+                    </a>
+                    <div class="projects__preview">
+                        <img src="../src/assets/images/projects/project2.png" alt="Project preview">
+                    </div>
+                </li>
+                <li class="projects__item" onmousemove="myFunction(event)" onmouseleave="myLeaveFunction()">
+                    <a href="#" class="projects__link">
+                        <h2 class="projects__title">BambuVerse NFT</h2>
+                        <p class="projects__subtitle">2022 - HTML, SCSS, Node.js</p>
+                    </a>
+                    <div class="projects__preview">
+                        <img src="../src/assets/images/projects/project3.png" alt="Project preview">
+                    </div>
+                </li>
+                <li class="projects__item" onmousemove="myFunction(event)" onmouseleave="myLeaveFunction()">
+                    <a href="#" class="projects__link">
+                        <h2 class="projects__title">WHIH Charity Fund</h2>
+                        <p class="projects__subtitle">2022 - HTML, SCSS, JQuery</p>
+                    </a>
+                    <div class="projects__preview">
+                        <img src="../src/assets/images/projects/project4.png" alt="Project preview">
+                    </div>
+                </li>
+                <li class="projects__item" onmousemove="myFunction(event)" onmouseleave="myLeaveFunction()">
+                    <a href="#" class="projects__link">
+                        <h2 class="projects__title">Shape UP GYM</h2>
+                        <p class="projects__subtitle">2021 - HTML, CSS, JQuery</p>
+                    </a>
+                    <div class="projects__preview">
+                        <img src="../src/assets/images/projects/project5.png" alt="Project preview">
+                    </div>
+                </li>
+            </ul>
+        </div>
+    </section>
     <!--========== \Page Content ==========-->
 </main>
 
+<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.10.4/gsap.min.js"></script>
 <!-- ADD JQUERY HERE -->
 <script
         src="https://code.jquery.com/jquery-3.6.0.min.js"
