--- a/src/index.html
+++ b/src/index.html
@@ -37,7 +37,7 @@
     <section class="section--general">
         <div class="general">
             <div>
-                <h1 class="general__title">front-end<br>developer</h1>
+                <h1 class="title">front-end<br>developer</h1>
                 <p class="general__subtitle">shaposhnikov — folio 2022</p>
             </div>
         </div>
