--- a/src/modules/header/index.html
+++ b/src/modules/header/index.html
@@ -11,16 +11,16 @@
 <nav class="nav main">
     <ul class="nav__list">
         <li class="nav__item">
-            <a href="#" class="nav__link">projects</a>
+            <a href="/src/index.html" class="nav__link">projects</a>
         </li>
         <li class="nav__item">
-            <a href="#" class="nav__link">about</a>
+            <a href="/src/about.html" class="nav__link">about</a>
         </li>
         <li class="nav__item">
             <a href="#" class="nav__link">skills</a>
         </li>
     </ul>
-    <ul class="socials">
+    <ul class="socials socials-nav">
         <li class="socials__item">
             <a href="#" class="socials__link">GitHub</a>
         </li>
