--- a/src/modules/header/index.html
+++ b/src/modules/header/index.html
@@ -11,10 +11,10 @@
 <nav class="nav main">
     <ul class="nav__list">
         <li class="nav__item">
-            <a href="../../index.html" class="nav__link">projects</a>
+            <a href="../index.html" class="nav__link">projects</a>
         </li>
         <li class="nav__item">
-            <a href="../../about.html" class="nav__link">about</a>
+            <a href="about.html" class="nav__link">about</a>
         </li>
         <li class="nav__item">
             <a href="#" class="nav__link">skills</a>
