--- a/src/modules/header/index.html
+++ b/src/modules/header/index.html
@@ -11,7 +11,7 @@
 <nav class="nav main">
     <ul class="nav__list">
         <li class="nav__item">
-            <a href="../index.html" class="nav__link">projects</a>
+            <a href="index.html" class="nav__link">projects</a>
         </li>
         <li class="nav__item">
             <a href="about.html" class="nav__link">about</a>
