--- a/src/modules/header/index.html
+++ b/src/modules/header/index.html
@@ -14,10 +14,10 @@
             <a href="index.html" class="nav__link">projects</a>
         </li>
         <li class="nav__item">
-            <a href="about.html" class="nav__link">about</a>
+            <a href="jungles.html" class="nav__link">jungles</a>
         </li>
         <li class="nav__item">
-            <a href="#" class="nav__link">skills</a>
+            <a href="about.html" class="nav__link">about</a>
         </li>
     </ul>
     <ul class="socials socials-nav">
