--- a/src/jungles.html
+++ b/src/jungles.html
@@ -14,6 +14,7 @@
     <meta property="og:description" content="Благодійний фонд, основною метою якого є допомога людям, що постраждали внаслідок війни.">
     <meta property="og:url" content="http://whih.com.ua/">
     <link rel="canonical" href="http://whih.com.ua/">
+    <meta name="theme-color" content="#393939">
     <meta name="apple-mobile-web-app-title" content="«Всеукраінський благодійний фонд «БЕЗ НАДІЇ СПОДІВАЮСЬ»">
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="format-detection" content="telephone=no">
