--- a/src/modules/header/index.html
+++ b/src/modules/header/index.html
@@ -9,34 +9,36 @@
     </button>
 </div>
 <nav class="nav main">
-    <ul class="nav__list">
-        <li class="nav__item">
-            <a href="index.html" class="nav__link">projects</a>
-        </li>
-        <li class="nav__item">
-            <a href="jungles.html" class="nav__link">jungles</a>
-        </li>
-        <li class="nav__item">
-            <a href="about.html" class="nav__link">about</a>
-        </li>
-    </ul>
-    <ul class="socials socials-nav">
-        <li class="socials__item">
-            <a href="#" class="socials__link">GitHub</a>
-        </li>
-        <li class="socials__item">
-            <a href="#" class="socials__link">Linkedin</a>
-        </li>
-        <li class="socials__item">
-            <a href="#" class="socials__link">Instagram</a>
-        </li>
-        <li class="socials__item">
-            <a href="#" class="socials__link">Twitter</a>
-        </li>
-        <li class="socials__item">
-            <a href="#" class="socials__link">Say Hello!</a>
-        </li>
-    </ul>
+    <div class="nav-wrapper">
+        <ul class="nav__list">
+            <li class="nav__item">
+                <a href="index.html" class="nav__link">projects</a>
+            </li>
+            <li class="nav__item">
+                <a href="jungles.html" class="nav__link">jungles</a>
+            </li>
+            <li class="nav__item">
+                <a href="about.html" class="nav__link">about</a>
+            </li>
+        </ul>
+        <ul class="socials socials-nav">
+            <li class="socials__item">
+                <a href="#" class="socials__link">GitHub</a>
+            </li>
+            <li class="socials__item">
+                <a href="#" class="socials__link">Linkedin</a>
+            </li>
+            <li class="socials__item">
+                <a href="#" class="socials__link">Instagram</a>
+            </li>
+            <li class="socials__item">
+                <a href="#" class="socials__link">Twitter</a>
+            </li>
+            <li class="socials__item">
+                <a href="#" class="socials__link">Say Hello!</a>
+            </li>
+        </ul>
+    </div>
 </nav>
 
 <script>
