--- a/src/modules/header/index.html
+++ b/src/modules/header/index.html
@@ -1,7 +1,7 @@
 <div class="header__inner">
     <div class="header__info">
-        <p>shaposhnikov
-        folio — 2022</p>
+        <a href="index.html">shaposhnikov
+        folio — 2022</a>
         <p>front-end developer</p>
     </div>
     <button class="menu-btn" type="button" id="menu-btn">
