--- a/src/index.html
+++ b/src/index.html
@@ -46,25 +46,25 @@
     <section class="section--projects">
         <div class="projects">
             <ul class="projects__list">
-                <li class="projects__item" onmousemove="myFunction(event)" onmouseleave="myLeaveFunction()">
+                <li class="projects__item">
                     <a href="#" class="projects__link">
                         <h2 class="projects__title">DrillHeadz NFT</h2>
                         <p class="projects__subtitle">2022 - HTML, SCSS, Node.js</p>
                     </a>
                     <div class="projects__preview">
-                        <img src="../src/assets/images/projects/project4.png" alt="Project preview">
+                        <img src="../src/assets/images/projects/project1.png" alt="Project preview">
                     </div>
                 </li>
-                <li class="projects__item" onmousemove="myFunction(event)" onmouseleave="myLeaveFunction()">
+                <li class="projects__item">
                     <a href="#" class="projects__link">
                         <h2 class="projects__title">Wall Street Mules NFT</h2>
                         <p class="projects__subtitle">2022 - HTML, SCSS, Node.js</p>
                     </a>
                     <div class="projects__preview">
-                        <img src="../src/assets/images/projects/project2.png" alt="Project preview">
+                        <img src="../src/assets/images/projects/project22.png" alt="Project preview">
                     </div>
                 </li>
-                <li class="projects__item" onmousemove="myFunction(event)" onmouseleave="myLeaveFunction()">
+                <li class="projects__item">
                     <a href="#" class="projects__link">
                         <h2 class="projects__title">BambuVerse NFT</h2>
                         <p class="projects__subtitle">2022 - HTML, SCSS, Node.js</p>
@@ -73,16 +73,16 @@
                         <img src="../src/assets/images/projects/project3.png" alt="Project preview">
                     </div>
                 </li>
-                <li class="projects__item" onmousemove="myFunction(event)" onmouseleave="myLeaveFunction()">
+                <li class="projects__item">
                     <a href="#" class="projects__link">
                         <h2 class="projects__title">WHIH Charity Fund</h2>
                         <p class="projects__subtitle">2022 - HTML, SCSS, JQuery</p>
                     </a>
                     <div class="projects__preview">
-                        <img src="../src/assets/images/projects/project4.png" alt="Project preview">
+                        <img src="../src/assets/images/projects/project44.png" alt="Project preview">
                     </div>
                 </li>
-                <li class="projects__item" onmousemove="myFunction(event)" onmouseleave="myLeaveFunction()">
+                <li class="projects__item">
                     <a href="#" class="projects__link">
                         <h2 class="projects__title">Shape UP GYM</h2>
                         <p class="projects__subtitle">2021 - HTML, CSS, JQuery</p>
