--- a/src/index.html
+++ b/src/index.html
@@ -32,6 +32,12 @@
 <div class="cursor"></div>
 <div class="aura"></div>
 <header id="included__header" class="header"></header>
+
+<div class="preloader noise">
+    <div></div>
+    <h2 class="title">shaposhnikov</h2>
+</div>
+
 <main class="main">
     <!--========== Page Content ==========-->
     <section class="section--general">
