general page fixes

--- a/src/about.html
+++ b/src/about.html
@@ -38,7 +38,7 @@
         <div class="about">
             <h2 class="title">about</h2>
             <div class="about__info">
-                <p class="about__info-text">I’m Pumpa Lumpa, Front-End Developer based in big city Tavriysk.</p>
+                <p class="about__info-text">I’m Pavlo, Front-End Developer based in Limerick.</p>
                 <p class="about__info-text">I consider coding a form of creation and I love to work with crazy designers that push me to think
                     outside the box, so we can bring to life tons of amazing projects.</p>
                 <p class="about__info-text">Besides my passion for coding (as you can see) you could easily find me on a Saturday night singing
