--- a/src/index.html
+++ b/src/index.html
@@ -53,7 +53,7 @@
         <div class="projects">
             <ul class="projects__list">
                 <li class="projects__item">
-                    <a href="#" class="projects__link">
+                    <a href="https://pavelshaposhnikov.github.io/Drill" target="_blank" class="projects__link">
                         <h2 class="projects__title">DrillHeadz NFT</h2>
                         <p class="projects__subtitle">2022 - HTML, SCSS, Node.js</p>
                     </a>
@@ -62,16 +62,16 @@
                     </div>
                 </li>
                 <li class="projects__item">
-                    <a href="#" class="projects__link">
+                    <a href="https://pavelshaposhnikov.github.io/Mules/" target="_blank" class="projects__link">
                         <h2 class="projects__title">Wall Street Mules NFT</h2>
                         <p class="projects__subtitle">2022 - HTML, SCSS, Node.js</p>
                     </a>
                     <div class="projects__preview">
-                        <img src="../src/assets/images/projects/project22.png" alt="Project preview">
+                        <img src="../src/assets/images/projects/project2.png" alt="Project preview">
                     </div>
                 </li>
                 <li class="projects__item">
-                    <a href="#" class="projects__link">
+                    <a href="https://pavelshaposhnikov.github.io/Bambu" target="_blank" class="projects__link">
                         <h2 class="projects__title">BambuVerse NFT</h2>
                         <p class="projects__subtitle">2022 - HTML, SCSS, Node.js</p>
                     </a>
@@ -80,17 +80,17 @@
                     </div>
                 </li>
                 <li class="projects__item">
-                    <a href="#" class="projects__link">
+                    <a href="https://whih.com.ua/" target="_blank" class="projects__link">
                         <h2 class="projects__title">WHIH Charity Fund</h2>
                         <p class="projects__subtitle">2022 - HTML, SCSS, JQuery</p>
                     </a>
                     <div class="projects__preview">
-                        <img src="../src/assets/images/projects/project44.png" alt="Project preview">
+                        <img src="../src/assets/images/projects/project4.png" alt="Project preview">
                     </div>
                 </li>
                 <li class="projects__item">
-                    <a href="#" class="projects__link">
-                        <h2 class="projects__title">Shape UP GYM</h2>
+                    <a href="https://pavelshaposhnikov.github.io/Lite-DeathMatch/" target="_blank" class="projects__link">
+                        <h2 class="projects__title">GTA Project Lite DM</h2>
                         <p class="projects__subtitle">2021 - HTML, CSS, JQuery</p>
                     </a>
                     <div class="projects__preview">
