--- a/src/index.html
+++ b/src/index.html
@@ -5,16 +5,10 @@
     <title>shaposhnikov — portfolio 2022</title>
     <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
     <meta content="width=device-width, initial-scale=1" name="viewport"/>
-    <meta name="description" content="Благодійний фонд, основною метою якого є допомога людям, що постраждали внаслідок війни.">
-    <meta name="keywords"
-          content="благодійність, фонд, україна, допомога, благодійний фонд, допомога українцям, допомога людям, що постраждали внаслідок війни, допомога людям">
     <meta name="author" content="https://shaposhnikov.in/">
     <meta property="og:type" content="website">
-    <meta property="og:title" content="«Всеукраінський благодійний фонд «БЕЗ НАДІЇ СПОДІВАЮСЬ»">
-    <meta property="og:description" content="Благодійний фонд, основною метою якого є допомога людям, що постраждали внаслідок війни.">
-    <meta property="og:url" content="http://whih.com.ua/">
-    <link rel="canonical" href="http://whih.com.ua/">
-    <meta name="apple-mobile-web-app-title" content="«Всеукраінський благодійний фонд «БЕЗ НАДІЇ СПОДІВАЮСЬ»">
+    <meta property="og:title" content="«Shaposhnikov folio»">
+    <meta name="apple-mobile-web-app-title" content="Shaposhnikov folio 2022">
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="format-detection" content="telephone=no">
     <meta name="format-detection" content="address=no">
