--- a/src/about.html
+++ b/src/about.html
@@ -38,7 +38,7 @@
         <div class="about">
             <h2 class="title">about</h2>
             <div class="about__info">
-                <p class="about__info-text">I’m Pavlo, Front-End Developer based in Limerick.</p>
+                <p class="about__info-text">I’m Pavlo, Junior Front-End Developer based in Limerick, Ireland.</p>
                 <p class="about__info-text">I consider coding a form of creation and I love to work with crazy designers that push me to think
                     outside the box, so we can bring to life tons of amazing projects.</p>
                 <p class="about__info-text">Besides my passion for coding (as you can see) you could easily find me on a Saturday night singing
@@ -46,16 +46,16 @@
                 </p>
                 <ul class="socials socials-about">
                     <li class="socials__item">
-                        <a href="#" class="socials__link">GitHub</a>
+                        <a href="https://github.com/pavloshaposhnikov" class="socials__link">GitHub</a>
                     </li>
                     <li class="socials__item">
-                        <a href="#" class="socials__link">Linkedin</a>
+                        <a href="https://www.linkedin.com/in/pavloshaposhnikov/" class="socials__link">Linkedin</a>
                     </li>
                     <li class="socials__item">
-                        <a href="#" class="socials__link">Instagram</a>
+                        <a href="https://www.instagram.com/hellherrr/" class="socials__link">Instagram</a>
                     </li>
                     <li class="socials__item">
-                        <a href="#" class="socials__link">Twitter</a>
+                        <a href="https://twitter.com/piercepis" class="socials__link">Twitter</a>
                     </li>
                 </ul>
                 <p class="about__info-author">Designed by <a href="#">Cris García.</a></p>
