--- a/src/index.html
+++ b/src/index.html
@@ -47,27 +47,27 @@
         <div class="projects">
             <ul class="projects__list">
                 <li class="projects__item">
-                    <a href="https://pavelshaposhnikov.github.io/Drill" target="_blank" class="projects__link">
+                    <a href="https://pavloshaposhnikov.github.io/Drill" target="_blank" class="projects__link">
                         <h2 class="projects__title">DrillHeadz NFT</h2>
-                        <p class="projects__subtitle">2022 - HTML, SCSS, Node.js</p>
+                        <p class="projects__subtitle">2021 - HTML, SCSS, native JS</p>
                     </a>
                     <div class="projects__preview">
                         <img src="../src/assets/images/projects/project1.png" alt="Project preview">
                     </div>
                 </li>
                 <li class="projects__item">
-                    <a href="https://pavelshaposhnikov.github.io/Mules/" target="_blank" class="projects__link">
+                    <a href="https://pavloshaposhnikov.github.io/Mules/" target="_blank" class="projects__link">
                         <h2 class="projects__title">Wall Street Mules NFT</h2>
-                        <p class="projects__subtitle">2022 - HTML, SCSS, Node.js</p>
+                        <p class="projects__subtitle">2022 - HTML, SCSS, native JS</p>
                     </a>
                     <div class="projects__preview">
                         <img src="../src/assets/images/projects/project2.png" alt="Project preview">
                     </div>
                 </li>
                 <li class="projects__item">
-                    <a href="https://pavelshaposhnikov.github.io/Bambu" target="_blank" class="projects__link">
+                    <a href="https://pavloshaposhnikov.github.io/Bambu" target="_blank" class="projects__link">
                         <h2 class="projects__title">BambuVerse NFT</h2>
-                        <p class="projects__subtitle">2022 - HTML, SCSS, Node.js</p>
+                        <p class="projects__subtitle">2022 - HTML, SCSS, native JS</p>
                     </a>
                     <div class="projects__preview">
                         <img src="../src/assets/images/projects/project3.png" alt="Project preview">
@@ -76,16 +76,16 @@
                 <li class="projects__item">
                     <a href="https://whih.com.ua/" target="_blank" class="projects__link">
                         <h2 class="projects__title">WHIH Charity Fund</h2>
-                        <p class="projects__subtitle">2022 - HTML, SCSS, JQuery</p>
+                        <p class="projects__subtitle">2022 - HTML, SCSS, native JS</p>
                     </a>
                     <div class="projects__preview">
                         <img src="../src/assets/images/projects/project4.png" alt="Project preview">
                     </div>
                 </li>
                 <li class="projects__item">
-                    <a href="https://pavelshaposhnikov.github.io/Lite-DeathMatch/" target="_blank" class="projects__link">
+                    <a href="https://pavloshaposhnikov.github.io/Lite-DeathMatch/" target="_blank" class="projects__link">
                         <h2 class="projects__title">GTA Project Lite DM</h2>
-                        <p class="projects__subtitle">2021 - HTML, CSS, JQuery</p>
+                        <p class="projects__subtitle">2021 - HTML, CSS, native JS</p>
                     </a>
                     <div class="projects__preview">
                         <img src="../src/assets/images/projects/project5.png" alt="Project preview">
