--- a/src/modules/header/index.html
+++ b/src/modules/header/index.html
@@ -23,19 +23,19 @@
         </ul>
         <ul class="socials socials-nav">
             <li class="socials__item">
-                <a href="#" class="socials__link">GitHub</a>
+                <a href="https://github.com/pavloshaposhnikov" class="socials__link">GitHub</a>
             </li>
             <li class="socials__item">
-                <a href="#" class="socials__link">Linkedin</a>
+                <a href="https://www.linkedin.com/in/pavloshaposhnikov/" class="socials__link">Linkedin</a>
             </li>
             <li class="socials__item">
-                <a href="#" class="socials__link">Instagram</a>
+                <a href="https://www.instagram.com/hellherrr/" class="socials__link">Instagram</a>
             </li>
             <li class="socials__item">
-                <a href="#" class="socials__link">Twitter</a>
+                <a href="https://twitter.com/piercepis" class="socials__link">Twitter</a>
             </li>
             <li class="socials__item">
-                <a href="#" class="socials__link">Say Hello!</a>
+                <a href="mailto:pavelshaposhnikov.web@gmail.com" class="socials__link">Say Hello!</a>
             </li>
         </ul>
     </div>
