--- a/src/index.html
+++ b/src/index.html
@@ -23,79 +23,81 @@
 </head>
 
 <body id="body">
-<div class="cursor"></div>
-<div class="aura"></div>
-<header id="included__header" class="header"></header>
-
-<div class="preloader noise">
-    <div></div>
-    <h2 class="title">shaposhnikov</h2>
+<div class="inner">
+	<div class="cursor"></div>
+	<div class="aura"></div>
+	<header id="included__header" class="header"></header>
+	
+	<div class="preloader noise">
+		<div></div>
+		<h2 class="title">shaposhnikov</h2>
+	</div>
+	
+	<main class="main">
+		<!--========== Page Content ==========-->
+		<section class="section--general">
+			<div class="general">
+				<div>
+					<h1 class="title">front-end<br>developer</h1>
+					<p class="general__subtitle">shaposhnikov — folio 2023</p>
+				</div>
+			</div>
+		</section>
+		
+		<section class="section--projects">
+			<div class="projects">
+				<ul class="projects__list">
+					<li class="projects__item">
+						<a href="https://pavloshaposhnikov.github.io/Drill" target="_blank" class="projects__link">
+							<h2 class="projects__title">DrillHeadz NFT</h2>
+							<p class="projects__subtitle">2021 - HTML, SCSS, native JS</p>
+						</a>
+						<div class="projects__preview">
+							<img src="../src/assets/images/projects/project1.png" alt="Project preview">
+						</div>
+					</li>
+					<li class="projects__item">
+						<a href="https://pavloshaposhnikov.github.io/Mules/" target="_blank" class="projects__link">
+							<h2 class="projects__title">Wall Street Mules NFT</h2>
+							<p class="projects__subtitle">2022 - HTML, SCSS, native JS</p>
+						</a>
+						<div class="projects__preview">
+							<img src="../src/assets/images/projects/project2.png" alt="Project preview">
+						</div>
+					</li>
+					<li class="projects__item">
+						<a href="https://pavloshaposhnikov.github.io/Bambu" target="_blank" class="projects__link">
+							<h2 class="projects__title">BambuVerse NFT</h2>
+							<p class="projects__subtitle">2022 - HTML, SCSS, native JS</p>
+						</a>
+						<div class="projects__preview">
+							<img src="../src/assets/images/projects/project3.png" alt="Project preview">
+						</div>
+					</li>
+					<li class="projects__item">
+						<a href="https://whih.com.ua/" target="_blank" class="projects__link">
+							<h2 class="projects__title">WHIH Charity Fund</h2>
+							<p class="projects__subtitle">2022 - HTML, SCSS, native JS</p>
+						</a>
+						<div class="projects__preview">
+							<img src="../src/assets/images/projects/project4.png" alt="Project preview">
+						</div>
+					</li>
+					<li class="projects__item">
+						<a href="https://pavloshaposhnikov.github.io/Lite-DeathMatch/" target="_blank" class="projects__link">
+							<h2 class="projects__title">GTA Project Lite DM</h2>
+							<p class="projects__subtitle">2021 - HTML, CSS, native JS</p>
+						</a>
+						<div class="projects__preview">
+							<img src="../src/assets/images/projects/project5.png" alt="Project preview">
+						</div>
+					</li>
+				</ul>
+			</div>
+		</section>
+		<!--========== \Page Content ==========-->
+	</main>
 </div>
-
-<main class="main">
-    <!--========== Page Content ==========-->
-    <section class="section--general">
-        <div class="general">
-            <div>
-                <h1 class="title">front-end<br>developer</h1>
-                <p class="general__subtitle">shaposhnikov — folio 2023</p>
-            </div>
-        </div>
-    </section>
-
-    <section class="section--projects">
-        <div class="projects">
-            <ul class="projects__list">
-                <li class="projects__item">
-                    <a href="https://pavloshaposhnikov.github.io/Drill" target="_blank" class="projects__link">
-                        <h2 class="projects__title">DrillHeadz NFT</h2>
-                        <p class="projects__subtitle">2021 - HTML, SCSS, native JS</p>
-                    </a>
-                    <div class="projects__preview">
-                        <img src="../src/assets/images/projects/project1.png" alt="Project preview">
-                    </div>
-                </li>
-                <li class="projects__item">
-                    <a href="https://pavloshaposhnikov.github.io/Mules/" target="_blank" class="projects__link">
-                        <h2 class="projects__title">Wall Street Mules NFT</h2>
-                        <p class="projects__subtitle">2022 - HTML, SCSS, native JS</p>
-                    </a>
-                    <div class="projects__preview">
-                        <img src="../src/assets/images/projects/project2.png" alt="Project preview">
-                    </div>
-                </li>
-                <li class="projects__item">
-                    <a href="https://pavloshaposhnikov.github.io/Bambu" target="_blank" class="projects__link">
-                        <h2 class="projects__title">BambuVerse NFT</h2>
-                        <p class="projects__subtitle">2022 - HTML, SCSS, native JS</p>
-                    </a>
-                    <div class="projects__preview">
-                        <img src="../src/assets/images/projects/project3.png" alt="Project preview">
-                    </div>
-                </li>
-                <li class="projects__item">
-                    <a href="https://whih.com.ua/" target="_blank" class="projects__link">
-                        <h2 class="projects__title">WHIH Charity Fund</h2>
-                        <p class="projects__subtitle">2022 - HTML, SCSS, native JS</p>
-                    </a>
-                    <div class="projects__preview">
-                        <img src="../src/assets/images/projects/project4.png" alt="Project preview">
-                    </div>
-                </li>
-                <li class="projects__item">
-                    <a href="https://pavloshaposhnikov.github.io/Lite-DeathMatch/" target="_blank" class="projects__link">
-                        <h2 class="projects__title">GTA Project Lite DM</h2>
-                        <p class="projects__subtitle">2021 - HTML, CSS, native JS</p>
-                    </a>
-                    <div class="projects__preview">
-                        <img src="../src/assets/images/projects/project5.png" alt="Project preview">
-                    </div>
-                </li>
-            </ul>
-        </div>
-    </section>
-    <!--========== \Page Content ==========-->
-</main>
 
 <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.10.4/gsap.min.js"></script>
 <!-- ADD JQUERY HERE -->
